# carboncloud

./: .gitignore  README.md  carboncloud.cabal  flake.nix
src/: CarbonCloud.hs
src/CarbonCloud/: Refined.hs
test/: Main.hs
test/CarbonCloud/: BepaSpec.hs  Gen.hs  RefinedSpec.hs
